# mihoyo-sticker

./: .gitignore  README.md  README.zh-CN.md  data.ts  eslint.config.mjs  eslint.config.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
.github/: dependabot.yml
.github/workflows/: vercel-deploy.yml
public/: baidu_verify_codeva-H7naUSFHbH.html
src/: global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  lib.rs
src/app/: desktop.tsx  globals.css  layout.tsx  page.tsx
src/components/: classify-bar.tsx  group-bar.tsx  panel.tsx  seo.tsx  sticker-card.tsx  sticker-img.tsx  timeago.tsx
src/components/ui/: button.tsx  card.tsx  context-menu.tsx  hover-card.tsx  input.tsx  scroll-area.tsx
src/lib/: clipboard.ts  convas.ts  sticker.test.ts  sticker.ts  strings.test.ts  strings.ts
src/lib/provider/: theme-provider.tsx
src/seo/: description.ts  index.ts  keywords.ts
src/types/: index.ts
