[package]
name = "mihoyo-sticker"
version = "0.1.0"
description = "A simple tool to copy, download, and manage MiYuShe stickers, making sharing and usage effortless across NEXT_PUBLIC_PLATFORMs."
authors = ["Clover You"]
license = "MIT"
repository = "https://github.com/clovu/mihoyo-sticker"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
thiserror = "2.0.14"
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
window-vibrancy = "0.6.0"
objc = "0.2.7"
tauri-plugin-clipboard-manager = "2"
chrono = "0.4.41"
objc2-app-kit = "0.3.1"
objc2 = "0.6.2"
objc2-foundation = "0.3.1"
core-graphics = "0.25.0"
